Fix copy code block action alignment
Code block actions should be right aligned

--- a/src/components/general-page.css
+++ b/src/components/general-page.css
@@ -70,6 +70,7 @@
 
 .ols-plugin__code-block__full-width-header {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   width: 100%;
 }
